[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Implementation of the 'Vault' node for the SAFE Network."
documentation = "https://docs.rs/safe_vault"
edition = "2018"
homepage = "https://maidsafe.net"
license = "GPL-3.0"
name = "safe_vault"
readme = "README.md"
repository = "https://github.com/maidsafe/safe_vault"
version = "0.19.2"

[dependencies]
base64 = "~0.10.1"
# Ensure bincode version is identical to that in SAFE Client Libs and SAFE Network Data.
bincode = "=1.1.4"
bytes = { version = "~0.4.12", features = ["serde"] }
crossbeam-channel = "~0.3.8"
ctrlc = "~3.1.3"
directories = "~2.0.1"
env_logger = "~0.7.1"
fake_clock = "~0.3.0"
fxhash = { version = "~0.2.1", optional = true }
hex = "~0.3.2"
hex_fmt = { version = "~0.3.0", optional = true }
lazy_static = "~1"
log = "~0.4.7"
mock-quic-p2p = { git = "https://github.com/maidsafe/quic-p2p", rev = "5c023b7ded2", optional = true }
pickledb = "~0.4.0"
quick-error = "~1.2.2"
rand = "~0.6.5"
rand_chacha = "~0.1.1"
routing_rand_core = { package = "rand_core", version = "~0.5.1" }
routing = { git = "https://github.com/maidsafe/routing.git", rev = "9e6c2301352ad5be6b76f277188e3cbd2fda866a"}
safe-nd ="~0.7.2"
self_update = "0.5.1"
serde = { version = "~1.0.97", features = ["derive"] }
serde_json = "~1.0.40"
structopt = "~0.2.18"
tiny-keccak = "~1.5.0"
unwrap = "~1.2.1"

[dev_dependencies]
maplit = "~1.0.1"
tempdir = "~0.3.7"

[[bin]]
name = "safe_vault"
doc = false

[features]
mock_base = ["routing/mock_base", "fxhash", "hex_fmt", "mock-quic-p2p"]
mock = ["mock_base"]
mock_parsec = ["routing/mock", "mock_base"]


[patch.crates-io]
safe-nd = { git = "https://github.com/joshuef/safe-nd.git", rev = "5a32e822aaba36e180f3baad7a341e6f59476e74"}
